# app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  tailwind.config.js
app/: auth.py  lifespan.py  main.py  models.py  rate_limit.py  router_registry.py  static.py  templates.py
app/routers/: dashboard.py  index.py  login.py
database/: database.py  models.py  schema.sql
loggers/: logger.py
settings/: config.py  gunicorn_conf.py  setup.yml
static/css/: styles.css  tailwind.output.css
static/js/: login.js
templates/: base.html
templates/dashboard/: dashboard.html
templates/index/: index.html
templates/login/: login.html
utils/: decorators.py
