[tool.poetry]
name = "scrapium-ai"
version = "0.1.0"
description = ""
authors = ["Yevhen Syzintsev <yevhen_s@dataforest.ai>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.32.1"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
gunicorn = "^23.0.0"
pyjwt = "^2.10.1"
fastapi-limiter = "^0.1.6"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
authlib = "^1.4.0"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
